--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId "com.cognizant.news"
+        applicationId "com.cognizant.newsList"
         minSdkVersion 22
         targetSdkVersion 29
         versionCode 1
@@ -43,6 +43,15 @@ dependencies {
 
     //RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.1.0-rc01'
+
+    //Retrofit for network api calls
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+
+    //Kotlin Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0'
+    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-beta01'
 
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
