--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.cognizant.newsList"
+        applicationId "com.cognizant.factList"
         minSdkVersion 22
         targetSdkVersion 28
         versionCode 1
@@ -56,6 +56,10 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0'
     api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-beta01'
 
+    //Dagger for dependency injection
+    kapt 'com.google.dagger:dagger-compiler:2.16'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.google.dagger:dagger:2.16'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
