--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,9 +65,10 @@ dependencies {
     //Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    androidTestImplementation "com.android.support.test.espresso:espresso-contrib:3.0.2"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.1.0"
     testImplementation "org.mockito:mockito-core:2.13.0"
+    androidTestImplementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
     testImplementation 'org.mockito:mockito-inline:2.13.0'
     androidTestImplementation 'org.mockito:mockito-android:2.13.0'
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC3'
