--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.cognizant.factList"
-        minSdkVersion 22
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -43,7 +43,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     //Picasso to load network images
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     //RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.1.0-rc01'
@@ -53,9 +53,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
 
     //Kotlin Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0'
-    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-beta01'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
+    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha01'
 
     //Dagger for dependency injection
     kapt 'com.google.dagger:dagger-compiler:2.16'
@@ -65,10 +65,10 @@ dependencies {
     //Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.1.0"
-    testImplementation "org.mockito:mockito-core:2.13.0"
-    androidTestImplementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.1.1"
+    testImplementation "org.mockito:mockito-core:2.23.0"
+    androidTestImplementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
     testImplementation 'org.mockito:mockito-inline:2.13.0'
     androidTestImplementation 'org.mockito:mockito-android:2.13.0'
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC3'
